--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -1,5 +1,5 @@
 <a
-  class="link flex items-center justify-center w-full py-2"
+  class="link flex items-center justify-center w-full py-2 cursor-default"
   [routerLink]="item.routerLink"
   [routerLinkActive]="'active'"
   #routerLinkActive="routerLinkActive"
