--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/categories-reset-record/categories-reset-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/categories-reset-record/categories-reset-record.component.html
@@ -1,12 +1,7 @@
-<div class="flex gap-x-2 items-start">
-  <svg-icon-with-bg class="text-charcoal bg-light-blue" [iconName]="record.icon" [size]="'small'"></svg-icon-with-bg>
-
-  <span class="flex flex-col">
-    <span
-      class="font-main text-charcoal text-base"
-      [innerHTML]="buildTranslationKey('message') | translate : { budgetType }"
-    >
-    </span>
-    <span class="font-main text-grey text-xs">{{ time }}</span>
+<app-generic-activity-log-record [icon]="record.icon" [date]="record.date">
+  <span
+    class="font-main text-charcoal text-base"
+    [innerHTML]="buildTranslationKey('message') | translate : { budgetType }"
+  >
   </span>
-</div>
+</app-generic-activity-log-record>
