--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -1,25 +1,19 @@
-<div class="flex gap-x-2 items-start">
-  <svg-icon-with-bg class="text-charcoal bg-light-blue" [iconName]="record.icon" [size]="'small'"></svg-icon-with-bg>
-
-  <span class="flex flex-col">
+<app-generic-activity-log-record [icon]="record.icon" [date]="record.date" [note]="record?.note">
+  <span class="flex justify-between">
     <span class="font-main text-charcoal text-base">
       {{ record.categoryName }}
     </span>
 
-    <span class="font-main text-grey text-xs">{{ time }}</span>
+    <span *ngIf="record?.isReset; else budgetTypeTemplate" class="font-main font-bold text-blue">
+      {{ record.value }} → 0
+    </span>
+
+    <ng-template #budgetTypeTemplate>
+      <ng-container [ngSwitch]="record.budgetType">
+        <span *ngSwitchCase="budgetType.Income" class="font-main font-bold text-dark-green">+ {{ record.value }}</span>
+
+        <span *ngSwitchCase="budgetType.Expense" class="font-main font-bold text-red">- {{ record.value }}</span>
+      </ng-container>
+    </ng-template>
   </span>
-
-  <app-info-icon *ngIf="record?.note as note" class="mt-0.5" [text]="note"></app-info-icon>
-</div>
-
-<span *ngIf="record?.isReset; else budgetTypeTemplate" class="font-main font-bold text-blue">
-  {{ record.value }} → 0
-</span>
-
-<ng-template #budgetTypeTemplate>
-  <ng-container [ngSwitch]="record.budgetType">
-    <span *ngSwitchCase="budgetType.Income" class="font-main font-bold text-dark-green">+ {{ record.value }}</span>
-
-    <span *ngSwitchCase="budgetType.Expense" class="font-main font-bold text-red">- {{ record.value }}</span>
-  </ng-container>
-</ng-template>
+</app-generic-activity-log-record>
