--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/root-value-change-record/root-value-change-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/root-value-change-record/root-value-change-record.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-x-2 items-start">
+<!-- <div class="flex gap-x-2 items-start">
   <svg-icon-with-bg class="text-charcoal bg-light-blue" [iconName]="record.icon" [size]="'small'"></svg-icon-with-bg>
 
   <span class="flex flex-col">
@@ -20,4 +20,22 @@
   <span *ngSwitchCase="actionType.Edit" class="font-main font-bold text-blue">
     {{ record.oldValue }} → {{ record.newValue }}
   </span>
-</ng-container>
+</ng-container> -->
+
+<app-generic-activity-log-record [icon]="record.icon" [date]="record.date" [note]="record?.note">
+  <span class="flex justify-between">
+    <span class="font-main text-charcoal text-base">
+      {{ buildTranslationKey('title.' + record.valueType) | translate }}
+    </span>
+
+    <ng-container [ngSwitch]="record.actionType">
+      <span *ngSwitchCase="actionType.Increase" class="font-main font-bold text-dark-green">+ {{ record.value }}</span>
+
+      <span *ngSwitchCase="actionType.Decrease" class="font-main font-bold text-red">- {{ record.value }}</span>
+
+      <span *ngSwitchCase="actionType.Edit" class="font-main font-bold text-blue">
+        {{ record.oldValue }} → {{ record.newValue }}
+      </span>
+    </ng-container>
+  </span>
+</app-generic-activity-log-record>
