--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
-<div class="flex flex-col items-center w-full">
+<div class="nav-container">
   <svg-icon class="logo text-white" [iconName]="'small-logo'" [size]="'big'"></svg-icon>
 
-  <span class="flex gap-x-1 my-4">
+  <span class="dots flex gap-x-1 my-4">
     <span class="w-1 h-1 bg-white rounded-full"></span>
     <span class="w-1 h-1 bg-white rounded-full"></span>
     <span class="w-1 h-1 bg-white rounded-full"></span>
