--- a/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
   <app-free-money-info-card class="card"></app-free-money-info-card>
 </div>
 
-<div class="main-cards pb-6">
+<div class="main-cards">
   <app-categories class="card" [budgetType]="budgetType.Income"></app-categories>
   <app-categories class="card" [budgetType]="budgetType.Expense"></app-categories>
   <app-activity-log class="card"></app-activity-log>
