--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
@@ -32,7 +32,6 @@
       class="flex flex-col w-full h-full overflow-y-auto gap-y-6"
       [class.justify-center]="isEmpty"
       [class.items-center]="isEmpty"
-      [class.scrollable]="!isEmpty"
     >
       <span *ngIf="isEmpty" class="font-main font-bold text-charcoal text-lg">
         {{ buildTranslationKey('emptyStateText') | translate }}
@@ -54,7 +53,7 @@
       ></app-button>
     </div>
 
-    <div class="w-full h-full">
+    <div class="w-full h-full flex items-center justify-center">
       <canvas baseChart class="w-full" [type]="'doughnut'" [data]="chartData$ | async" [options]="chartOptions">
       </canvas>
     </div>
