--- a/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
@@ -1,4 +1,8 @@
-<app-page-header [title]="buildTranslationKey('pageTitle') | translate"></app-page-header>
+<app-page-header [title]="buildTranslationKey('pageTitle') | translate">
+  <span>
+    <app-language-switcher></app-language-switcher>
+  </span>
+</app-page-header>
 
 <div class="info-cards mb-6">
   <app-income-info-card class="card"></app-income-info-card>
