--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/categories-reset-record/categories-reset-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/categories-reset-record/categories-reset-record.component.html
@@ -1,7 +1,4 @@
 <app-generic-activity-log-record [icon]="record.icon" [date]="record.date">
-  <span
-    class="font-main text-charcoal text-base"
-    [innerHTML]="buildTranslationKey('message') | translate : { budgetType }"
-  >
+  <span class="font-main text-charcoal text-base" [innerHTML]="buildTranslationKey(record.budgetType) | translate">
   </span>
 </app-generic-activity-log-record>
