--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-card-value-modal/info-card-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-card-value-modal/info-card-value-modal.component.html
@@ -38,7 +38,7 @@
   ></app-button>
 
   <app-button
-    [buttonSize]="'medium'"
+    [buttonSize]="'big'"
     [colorScheme]="'charcoal'"
     [text]="mainButtonText | translate"
     [disabled]="!isFormValid"
