--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -4,6 +4,8 @@
 </div>
 
 <div class="flex items-center gap-x-2">
-  <span class="font-main font-bold text-charcoal text-base">{{ category?.value }}</span>
+  <span class="font-main font-bold text-charcoal text-base">
+    {{ category?.value }}&nbsp;{{ currencySymbol$ | async }}
+  </span>
   <app-menu [menuActions]="menuActions"></app-menu>
 </div>
