--- a/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
@@ -3,4 +3,5 @@
   [icon]="icon$ | async"
   [matTooltip]="buildTranslationKey('tooltip') | translate"
   [matTooltipPosition]="'below'"
-></app-menu>
+>
+</app-menu>
