--- a/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <app-page-header [title]="buildTranslationKey('pageTitle') | translate">
-  <span>
+  <span class="flex items-center gap-x-2">
+    <app-currency-switcher></app-currency-switcher>
     <app-language-switcher></app-language-switcher>
   </span>
 </app-page-header>
