--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.scss
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.scss
@@ -5,7 +5,7 @@
     @apply flex items-center justify-center w-full py-2 cursor-default;
 
     &.active {
-      @apply relative;
+      @apply relative pointer-events-none;
 
       &::before {
         @apply absolute top-0 left-0 w-1 bg-green h-full block rounded-tr-sm rounded-br-sm;
