--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
@@ -17,7 +17,7 @@
     @apply flex-row justify-between w-full h-12 px-4 py-0;
 
     .nav-container {
-      @apply w-auto h-full;
+      @apply w-auto h-full flex-row gap-x-4;
     }
 
     .logo,
