--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -6,7 +6,7 @@
   [class.justify-center]="isEmpty"
   [class.items-center]="isEmpty"
 >
-  <span *ngIf="isEmpty" class="font-main font-bold text-charcoal text-lg">
+  <span *ngIf="isEmpty" class="font-main font-bold text-charcoal text-lg text-center">
     {{ buildTranslationKey('emptyStateText') | translate }}
   </span>
 
