--- a/src/app/modules/budget-tracker/budget-tracker.component.html
+++ b/src/app/modules/budget-tracker/budget-tracker.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <ng-template #main>
-  <div class="main px-6 pb-6 w-full bg-dirty-white">
+  <div class="main p-6 w-full bg-dirty-white">
     <router-outlet></router-outlet>
   </div>
 </ng-template>
