--- a/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   </span>
 </app-page-header>
 
-<div class="info-cards mb-6">
+<div class="info-cards">
   <app-income-info-card class="card"></app-income-info-card>
   <app-expense-info-card class="card"></app-expense-info-card>
   <app-balance-info-card class="card"></app-balance-info-card>
