--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -12,7 +12,7 @@
 
   <ng-container *ngIf="!isEmpty">
     <div *ngFor="let day of activityLog$ | async" class="flex flex-col gap-6 relative">
-      <span [style.top.px]="'-0.1'" class="flex font-main text-grey text-sm sticky bg-white py-0.5 z-10">
+      <span [style.top.px]="'-0.1'" class="flex font-main text-grey text-sm sticky bg-white py-0.5 z-10 font-semibold">
         {{ day.date }}
       </span>
 
