--- a/src/app/modules/budget-tracker/modules/statistics/statistics.component.scss
+++ b/src/app/modules/budget-tracker/modules/statistics/statistics.component.scss
@@ -1,4 +1,4 @@
 :host {
-  @apply grid grid-rows-2 w-full h-full overflow-hidden;
+  @apply grid grid-rows-2 w-full h-full overflow-hidden gap-y-6;
   grid-template-rows: auto minmax(0, 1fr);
 }
