--- a/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-page-header [title]="buildTranslationKey('pageTitle') | translate">
+<app-page-header class="text-2xl" [title]="buildTranslationKey('pageTitle') | translate">
   <span class="flex items-center gap-x-2">
     <app-currency-switcher></app-currency-switcher>
     <app-language-switcher></app-language-switcher>
