--- a/src/app/modules/budget-tracker/modules/statistics/statistics.component.html
+++ b/src/app/modules/budget-tracker/modules/statistics/statistics.component.html
@@ -1,3 +1,3 @@
-<app-page-header [title]="buildTranslationKey('pageTitle') | translate"></app-page-header>
+<app-page-header class="text-2xl" [title]="buildTranslationKey('pageTitle') | translate"></app-page-header>
 
 <app-monthly-statistics></app-monthly-statistics>
