--- a/src/app/modules/design-system/components/page-header/page-header.component.html
+++ b/src/app/modules/design-system/components/page-header/page-header.component.html
@@ -1,3 +1,3 @@
-<span class="text-charcoal text-2xl font-main font-bold">{{ title }}</span>
+<span class="text-charcoal font-main font-bold">{{ title }}</span>
 
 <ng-content></ng-content>
