dynamic error message height

--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
@@ -23,26 +23,18 @@
         </mat-option>
       </mat-select>
 
-      <mat-error *ngIf="hasCategoryIconRequiredError">
-        {{ 'formErrors.required' | translate }}
-      </mat-error>
+      <mat-error *ngIf="hasCategoryIconRequiredError">{{ 'formErrors.required' | translate }}</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>{{ buildTranslationKey('categoryNameTitle') | translate }}</mat-label>
       <input matInput [formControlName]="formFields.CategoryName" />
 
-      <mat-error *ngIf="hasCategoryNameRequiredError">
-        {{ 'formErrors.required' | translate }}
-      </mat-error>
+      <mat-error *ngIf="hasCategoryNameRequiredError">{{ 'formErrors.required' | translate }}</mat-error>
 
-      <mat-error *ngIf="hasMaxLengthError">
-        {{ buildTranslationKey('categoryNameLengthError') | translate }}
-      </mat-error>
+      <mat-error *ngIf="hasMaxLengthError">{{ buildTranslationKey('categoryNameLengthError') | translate }}</mat-error>
 
-      <mat-error *ngIf="hasCategoryExistsError">
-        {{ buildTranslationKey('categoryExistsError') | translate }}
-      </mat-error>
+      <mat-error *ngIf="hasCategoryExistsError">{{ buildTranslationKey('categoryExistsError') | translate }}</mat-error>
     </mat-form-field>
   </form>
 </div>
