--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -6,22 +6,16 @@
       <mat-label>{{ buildTranslationKey('valueToAddTitle') | translate }}</mat-label>
       <input matInput [type]="'number'" [formControlName]="formFieldsEnum.ValueToAdd" />
 
-      <mat-error *ngIf="hasRequiredError">
-        {{ 'formErrors.required' | translate }}
-      </mat-error>
+      <mat-error *ngIf="hasRequiredError">{{ 'formErrors.required' | translate }}</mat-error>
 
-      <mat-error *ngIf="hasMinValueError">
-        {{ 'formErrors.minValue' | translate : { minValue: 1 } }}
-      </mat-error>
+      <mat-error *ngIf="hasMinValueError">{{ 'formErrors.minValue' | translate : { minValue: 1 } }}</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>{{ buildTranslationKey('noteTitle') | translate }}</mat-label>
       <textarea matInput rows="3" [formControlName]="formFieldsEnum.Note"></textarea>
 
-      <mat-error *ngIf="hasMaxLengthError">
-        {{ 'formErrors.noteTooLong' | translate }}
-      </mat-error>
+      <mat-error *ngIf="hasMaxLengthError">{{ 'formErrors.noteTooLong' | translate }}</mat-error>
     </mat-form-field>
   </form>
 </div>
