--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.scss
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.scss
@@ -41,5 +41,9 @@
         @apply items-center justify-center;
       }
     }
+
+    .cdk-virtual-scroll-spacer {
+      @apply h-auto #{!important};
+    }
   }
 }
