hotfix for scroll

--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.scss
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.scss
@@ -33,17 +33,13 @@
 
   &::ng-deep {
     .cdk-virtual-scroll-content-wrapper {
-      @apply flex flex-col w-full h-full overflow-y-auto gap-y-4;
+      @apply flex flex-col gap-y-4;
     }
 
     cdk-virtual-scroll-viewport.isEmpty {
       .cdk-virtual-scroll-content-wrapper {
         @apply items-center justify-center;
       }
-    }
-
-    .cdk-virtual-scroll-spacer {
-      @apply h-auto #{!important};
     }
   }
 }
