--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.scss
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.scss
@@ -1,5 +1,5 @@
 :host {
-  @apply flex justify-between items-center px-5 py-2 pr-2 border-solid border-2 border-grey rounded-lg hover:border-charcoal;
+  @apply flex justify-between items-center px-5 py-2 pr-2 border-solid border-2 border-grey rounded-lg hover:border-charcoal h-12;
 
   @media (max-width: 480px) {
     @apply border-charcoal;
