--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -10,8 +10,8 @@
     {{ buildTranslationKey('emptyStateText') | translate }}
   </span>
 
-  <cdk-virtual-scroll-viewport *ngIf="!isEmpty" itemSize="70" class="w-full h-full overflow-y-hidden">
-    <div *cdkVirtualFor="let day of activityLog$ | async; trackBy: trackByDate" class="flex flex-col gap-y-4 relative">
+  <div *ngIf="!isEmpty" class="w-full h-full flex flex-col gap-y-6 overflow-y-auto">
+    <div *ngFor="let day of activityLog$ | async; trackBy: trackByDate" class="flex flex-col gap-y-2 relative">
       <span [style.top.px]="'-0.1'" class="flex font-main text-grey text-sm sticky bg-white py-0.5 z-10 font-bold">
         {{ day.date }}
       </span>
@@ -34,5 +34,5 @@
         </ng-container>
       </ng-container>
     </div>
-  </cdk-virtual-scroll-viewport>
+  </div>
 </div>
