color schemes from enum to type

--- a/src/app/modules/budget-tracker/budget-tracker.component.html
+++ b/src/app/modules/budget-tracker/budget-tracker.component.html
@@ -2,7 +2,7 @@
 
 <div
   *ngIf="isLoading$ | async"
-  class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-black-transparent z-50"
+  class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-dirty-white z-50"
 >
   <app-loader [colorMode]="'dark'" [size]="'main-loader'"></app-loader>
 </div>
