--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/free-money-info-card/free-money-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/free-money-info-card/free-money-info-card.component.html
@@ -1,6 +1,6 @@
 <app-info-card
   [iconName]="'coins'"
-  [colorScheme]="colorScheme.Charcoal"
+  [colorScheme]="'charcoal'"
   [primaryText]="freeMoney$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
   [shouldDisplayMenu]="true"
