--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/savings-info-card/savings-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/savings-info-card/savings-info-card.component.html
@@ -1,7 +1,7 @@
 <app-info-card
   [iconName]="'jar'"
   [iconColorClass]="'text-dark-green'"
-  [colorScheme]="colorScheme.Green"
+  [colorScheme]="'green'"
   [primaryText]="savings$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
   [shouldDisplayMenu]="true"
