--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -12,7 +12,7 @@
 
   <div *ngIf="!isEmpty" class="w-full h-full flex flex-col gap-y-6 overflow-y-auto scroll-smooth will-change-scroll">
     <div *ngFor="let day of activityLog$ | async; trackBy: trackByDate" class="flex flex-col gap-y-4 relative">
-      <span [style.top.px]="'-0.1'" class="flex font-main text-grey text-sm sticky bg-white py-0.5 z-10 font-bold">
+      <span class="flex font-main text-grey text-sm bg-white py-0.5 z-10 font-bold">
         {{ day.date }}
       </span>
 
