--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -2,7 +2,7 @@
 
 <div
   *ngVar="isEmpty$ | async as isEmpty"
-  class="flex flex-col overflow-y-hidden h-full"
+  class="flex flex-col overflow-hidden h-full w-full"
   [class.justify-center]="isEmpty"
   [class.items-center]="isEmpty"
 >
@@ -10,29 +10,36 @@
     {{ buildTranslationKey('emptyStateText') | translate }}
   </span>
 
-  <div *ngIf="!isEmpty" class="w-full h-full flex flex-col gap-y-6 overflow-y-auto scroll-smooth will-change-scroll">
-    <div *ngFor="let day of activityLog$ | async; trackBy: trackByDate" class="flex flex-col gap-y-4 relative">
-      <span class="flex font-main text-grey text-sm bg-white py-0.5 z-10 font-bold">
-        {{ day.date }}
-      </span>
-
-      <ng-container *ngFor="let record of day.records; trackBy: trackByRecordId">
-        <ng-container [ngSwitch]="record.recordType">
-          <app-root-value-change-record *ngSwitchCase="recordType.RootValueChange" [record]="record">
-          </app-root-value-change-record>
-
-          <app-category-management-record *ngSwitchCase="recordType.CategoryManagement" [record]="record">
-          </app-category-management-record>
-
-          <app-category-value-change-record *ngSwitchCase="recordType.CategoryValueChange" [record]="record">
-          </app-category-value-change-record>
-
-          <app-categories-reset-record
-            *ngSwitchCase="recordType.CategoriesReset"
-            [record]="record"
-          ></app-categories-reset-record>
-        </ng-container>
-      </ng-container>
+  <cdk-virtual-scroll-viewport *ngIf="!isEmpty" itemSize="56" class="h-full w-full !overflow-x-hidden">
+    <div *cdkVirtualFor="let item of itemsToRender$ | async" class="h-14 flex items-center w-full">
+      <ng-container
+        *ngTemplateOutlet="isItemDate(item) ? dateItem : recordItem; context: { item: item }"
+      ></ng-container>
     </div>
-  </div>
+  </cdk-virtual-scroll-viewport>
 </div>
+
+<ng-template #dateItem let-item="item">
+  <span class="flex font-main text-grey text-sm bg-white py-0.5 z-10 font-bold h-full items-center">
+    {{ item }}
+  </span>
+</ng-template>
+
+<ng-template #recordItem let-item="item">
+  <ng-container [ngSwitch]="item.recordType">
+    <app-root-value-change-record *ngSwitchCase="recordType.RootValueChange" class="w-full" [record]="item">
+    </app-root-value-change-record>
+
+    <app-category-management-record *ngSwitchCase="recordType.CategoryManagement" class="w-full" [record]="item">
+    </app-category-management-record>
+
+    <app-category-value-change-record *ngSwitchCase="recordType.CategoryValueChange" class="w-full" [record]="item">
+    </app-category-value-change-record>
+
+    <app-categories-reset-record
+      *ngSwitchCase="recordType.CategoriesReset"
+      class="w-full"
+      [record]="item"
+    ></app-categories-reset-record>
+  </ng-container>
+</ng-template>
