--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+.truncate {
+  @apply overflow-hidden overflow-ellipsis whitespace-nowrap;
+}
+
 // SNACKBAR
 .mat-mdc-snack-bar-container {
   .mdc-snackbar__surface {
@@ -160,4 +164,9 @@ textarea {
 // MAT ERRORS
 .mat-mdc-form-field-error-wrapper {
   @apply p-0 #{!important};
+}
+
+// SCROLLER
+.cdk-virtual-scroll-content-wrapper {
+  @apply w-full #{!important};
 }
