--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-management-record/category-management-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-management-record/category-management-record.component.html
@@ -3,16 +3,16 @@
     <ng-container *ngSwitchCase="actionType.Add">
       <span
         [innerHTML]="
-          (buildTranslationKey('categoryAdded') | translate : { categoryName: record.categoryName }) +
-          (buildTranslationKey('budgetType.' + record.budgetType) | translate)
+          buildTranslationKey('categoryAdded.budgetType.' + record.budgetType)
+            | translate : { categoryName: record.categoryName }
         "
       ></span>
     </ng-container>
     <ng-container *ngSwitchCase="actionType.Remove">
       <span
         [innerHTML]="
-          (buildTranslationKey('categoryRemoved') | translate : { categoryName: record.categoryName }) +
-          (buildTranslationKey('budgetType.' + record.budgetType) | translate)
+          buildTranslationKey('categoryRemoved.budgetType.' + record.budgetType)
+            | translate : { categoryName: record.categoryName }
         "
       ></span>
     </ng-container>
