--- a/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
+++ b/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
@@ -1,6 +1,6 @@
 <svg-icon-with-bg class="text-charcoal bg-light-blue" [iconName]="icon" [size]="'small'"></svg-icon-with-bg>
 
-<div class="flex flex-col gap-y-0.5 flex-1">
+<div class="flex flex-col gap-y-0.5 flex-1 overflow-hidden">
   <span class="font-main text-charcoal text-base">
     <ng-content></ng-content>
   </span>
