--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
@@ -37,7 +37,7 @@
       </span>
 
       <cdk-virtual-scroll-viewport *ngIf="!isEmpty" itemSize="48" class="h-full">
-        <div *cdkVirtualFor="let category of categories$ | async" class="h-15 flex items-start">
+        <div *cdkVirtualFor="let category of categories$ | async" class="h-15 flex items-center">
           <app-category-item class="w-full" [categoryId]="category.id"></app-category-item>
         </div>
       </cdk-virtual-scroll-viewport>
