tooltip for items

--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-management-record/category-management-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-management-record/category-management-record.component.html
@@ -9,7 +9,7 @@
         class="block truncate"
         [innerHTML]="content"
         customTooltip
-        [contentTemplate]="template"
+        [tooltipTemplate]="template"
         [showTooltipOnlyOnOverflow]="true"
       >
         <ng-template #template>
