--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -2,7 +2,7 @@
   <svg-icon class="text-charcoal" [iconName]="category?.icon"></svg-icon>
   <span
     customTooltip
-    [text]="category?.name"
+    [tooltipText]="category?.name"
     [showTooltipOnlyOnOverflow]="true"
     class="font-main font-bold text-charcoal text-base truncate"
   >
