--- a/src/app/modules/design-system/components/custom-tooltip/custom-tooltip.component.html
+++ b/src/app/modules/design-system/components/custom-tooltip/custom-tooltip.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngTemplateOutlet="contentTemplate || simpleText"> </ng-container>
+<ng-container *ngTemplateOutlet="tooltipTemplate || tooltipTextTemplate"> </ng-container>
 
-<ng-template #simpleText>
-  {{ text }}
+<ng-template #tooltipTextTemplate>
+  {{ tooltipText }}
 </ng-template>
